# bitrise-reports

./: .flake8  .gitignore  .mergify.yml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
bitrise_reports/: __init__.py  app.py  bitrise.py  cli.py  cli_parser.py  di.py  entrypoint.py  errors.py  metrics.py  middleware.py  models.py  reporting.py
docs/: _config.yml  changelog.md  contributing.md  index.md  installing.md  using.md
tests/: test_app.py  test_bitrise.py  test_bitrise_api_fetcher.py  test_builds_analyser.py  test_cli.py  test_component.py  test_data_converter.py  test_json_reporter.py  test_metrics_cruncher.py  test_project_finder.py  test_project_slug_finder.py  utils.py
tests/fixtures/: bitrise_200OK.json  bitrise_200OK_page01.json  bitrise_200OK_page02.json  bitrise_404.json  bitrise_5xx.json  bitrise_apps.json  bitrise_builds.json
