[tool.poetry]
name = "bitrise-reports"
version = "0.2.0"
description = "The missing tool to extract reports about projects you build on Bitrise"
authors = ["Ubiratan Soares <ubiratanfsoares@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dotanuki-labs/bitrise-reports"
repository = "https://github.com/dotanuki-labs/bitrise-reports"
include = [ "LICENSE.md" ]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.26.0"
click = "8.0.1"
python-dateutil = "2.8.2"
rich = "10.12.0"
openpyxl = "3.0.9"
pretty-errors = "1.2.24"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
black = "21.9b0"
bandit = "1.7.0"
vulture = "2.3"
pytest = "6.2.5"
pytest-cov = "3.0.0"
responses = "0.14.0"

[tool.poetry.scripts]
bitrise-reports = "bitrise_reports:main"

[tool.black]
line-length = 100

[tool.vulture]
exclude = ["entrypoint.py", "__init__.py"]
min_confidence = 80
sort_by_size = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
